-- MySQL Script generated by MySQL Workbench
-- Fri Dec 16 09:00:52 2022
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema MAW1.1-MLD
-- -----------------------------------------------------

-- -----------------------------------------------------
-- Table `exercises`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `exercises` ;

CREATE TABLE IF NOT EXISTS `exercises` (
  `idExercises` INT NOT NULL AUTO_INCREMENT,
  `title` VARCHAR(45) NOT NULL,
  `state` INT NOT NULL,
  PRIMARY KEY (`idExercises`),
  UNIQUE INDEX `title_UNIQUE` (`title` ASC) VISIBLE)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `questions`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `questions` ;

CREATE TABLE IF NOT EXISTS `questions` (
  `idquestions` INT NOT NULL AUTO_INCREMENT,
  `title` VARCHAR(45) NOT NULL,
  `type` INT NOT NULL,
  `exercises_idExercises` INT NOT NULL,
  PRIMARY KEY (`idquestions`),
  INDEX `fk_questions_exercises1_idx` (`exercises_idExercises` ASC) VISIBLE,
  CONSTRAINT `fk_questions_exercises1`
    FOREIGN KEY (`exercises_idExercises`)
    REFERENCES `exercises` (`idExercises`)
    ON DELETE CASCADE
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Answers`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Answers` ;

CREATE TABLE IF NOT EXISTS `Answers` (
  `idAnswers` INT NOT NULL AUTO_INCREMENT,
  `createDate` TIMESTAMP NULL,
  PRIMARY KEY (`idAnswers`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Results`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Results` ;

CREATE TABLE IF NOT EXISTS `Results` (
  `idResults` INT NOT NULL AUTO_INCREMENT,
  `Result` VARCHAR(255) NULL,
  `Answers_idAnswers` INT NOT NULL,
  PRIMARY KEY (`idResults`),
  INDEX `fk_Results_Answers1_idx` (`Answers_idAnswers` ASC) VISIBLE,
  CONSTRAINT `fk_Results_Answers1`
    FOREIGN KEY (`Answers_idAnswers`)
    REFERENCES `Answers` (`idAnswers`)
    ON DELETE CASCADE
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `Results_has_questions`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `Results_has_questions` ;

CREATE TABLE IF NOT EXISTS `Results_has_questions` (
  `Results_idResults` INT NOT NULL,
  `questions_idquestions` INT NULL,
  INDEX `fk_Results_has_questions_questions1_idx` (`questions_idquestions` ASC) VISIBLE,
  INDEX `fk_Results_has_questions_Results1_idx` (`Results_idResults` ASC) VISIBLE,
  CONSTRAINT `fk_Results_has_questions_Results1`
    FOREIGN KEY (`Results_idResults`)
    REFERENCES `Results` (`idResults`)
    ON DELETE CASCADE
    ON UPDATE NO ACTION,
  CONSTRAINT `fk_Results_has_questions_questions1`
    FOREIGN KEY (`questions_idquestions`)
    REFERENCES `questions` (`idquestions`)
    ON DELETE CASCADE
    ON UPDATE NO ACTION)
ENGINE = InnoDB;


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
